# covid_cb

./: .gitignore  .gitmodules  LICENSE  README.MD  package.json
covid-client/react/: README.md  package.json
covid-client/react/public/: index.html
covid-client/react/src/: App.css  App.tsx  Context.ts  index.tsx
covid-client/react/src/components/: ChatDialog.tsx  index.ts
covid-client/react/src/components/ChatInput/: ChatInput-style.ts  index.tsx
covid-client/react/src/components/ChatMessage/: ChatMessage-style.ts  index.tsx
covid-client/react/src/components/Header/: Header-style.ts  index.tsx
covid-client/react/src/components/LanguageSelector/: index.tsx
covid-client/react/src/functions/: index.ts
covid-client/react/src/messages/: index.ts  messages_en.json  messages_th.json
covid-unified-gateway/: Cargo.toml  README.MD
covid-unified-gateway/src/: main.rs
covid-unified-gateway/src/utils/: mod.rs
covid-unified-gateway/src/wa/: mod.rs  test.rs
covid-unified-gateway/src/wlt/: mod.rs
covid-wa-gateway/: README.MD  package.json
covid-wa-gateway/msg-wa/: README.MD  index.js  package.json
covid-wa-gateway/start-wa/: README.MD  index.js  package.json
covid-wa-gateway/stop-wa/: README.MD  index.js  package.json
covid-wlt-gateway/: README.MD
covid-wlt-gateway/input-translate/: README.MD  index.js  package.json
covid-wlt-gateway/output-translate/: README.MD  index.js  package.json
wlt-dataset/: README.md  csv2tmx.py  requirements.txt  tmx2csv.py  validate.py
wlt-dataset/th/: corpus.csv  corpus.tmx  corpus.xlsx  glossary.csv  glossary.tmx
(+6 files in other folders)
