[package]
name = "covid-unified-gateway"
version = "0.1.0"
authors = ["nattapongs <nattapong.sirilappanich2@ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "^0.4"
dotenv = "^0.15"
futures = "^0.3"
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version="^1.0", features = ["raw_value"] }